# play-backend/app/models/ColorModel.scala
@@ -1,6 +1,6 @@
 package models
 
-import play.api.libs.json.{Json, Writes}
+import play.api.libs.json.{Json, Reads, Writes}
 
 case class Version(playVersion: String)
 object Version {
@@ -24,4 +24,26 @@ object Color {
   )
 
   implicit val format = Json.format[Color]
+}
+
+case class ColorJudgement(color: String, choice: String)
+object ColorJudgement {
+  val example = ColorJudgement("#ff00ff", "Red")
+
+  implicit val format = Json.format[ColorJudgement]
+}
+
+object ColorChoice extends Enumeration {
+  type ColorChoice = Value
+
+  val Red = Value("Red")
+  val Orange = Value("Orange")
+  val Yellow = Value("Yellow")
+  val Green = Value("Green")
+  val Blue = Value("Blue")
+  val Pink = Value("Pink")
+  val Purple = Value("Purple")
+
+  implicit val reads = Reads.enumNameReads(ColorChoice)
+  implicit val writes = Writes.enumNameWrites
 }
